src/objects/PC_Card_Program__c.object
<CustomObject>
    <fields>
        <fullName>Program_Expiration__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <referenceTo>Programs__c</referenceTo>
        <relationshipLabel>PC Card Programs</relationshipLabel>
        <relationshipName>PC_Card_Programs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Programs__c</fullName>
        <label>Programs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMEX</fullName>
                </value>
                <value>
                    <fullName>BofA</fullName>
                </value>
                <value>
                    <fullName>Chase</fullName>
                </value>
                <value>
                    <fullName>Citi</fullName>
                </value>
                <value>
                    <fullName>WEX</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Spend__c</fullName>
        <label>Total Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_Cards__c</fullName>
        <label># of Cards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PC Card Program</label>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>PC Card Program Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PC Card Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>